Add user search endpoint
